kubernetes/industryfusion/nginx_if.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: industryfusion
spec:
  ports:
  - port: 80
    name: "nginx"
  selector:
    app: nginx
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: industryfusion
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
